Find user by email
