# src/shared/infra/http/routes/users.routes.ts
@@ -5,15 +5,18 @@ import { CreateUserController } from "@modules/accounts/useCases/createUser/Crea
 import { UpdateUserController } from "@modules/accounts/useCases/updateUser/UpdateUserController";
 import { ensureAuthenticated } from "../middlewares/EnsureAuthenticated";
 import { UpdateUserAvatarController } from "@modules/accounts/useCases/updateUserAvatar/UpdateUserAvatarController";
+import { FindUserByEmailController } from "@modules/accounts/useCases/findUserByEmail/FindUserByEmailController";
 
 const uploadAvatar = multer(uploadConfig.upload("./tmp/avatar"))
 const usersRoutes = Router();
 const createUserController = new CreateUserController();
 const updateUserController = new UpdateUserController
 const uploadUserAvatarController = new UpdateUserAvatarController();
+const findUserByEmailController = new FindUserByEmailController();
 
 usersRoutes.post("/", createUserController.handle);
 usersRoutes.put("/", ensureAuthenticated, updateUserController.handle);
+usersRoutes.get("/email", findUserByEmailController.handle);
 usersRoutes.patch(
     "/avatar",
     ensureAuthenticated,
